--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -55,7 +55,7 @@
 
           <li th:replace="::menuItem ('/','home','home page','home','Home')">
             <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-            <span>Home</span>
+            <span>THUUS</span>
           </li>
 
           <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find owners')">
